Edited Dr. K.'s file (more to be done); edited builder.htm and translator.htm based on work w/Steve G.

--- a/docs/Ve-Suite.css
+++ b/docs/Ve-Suite.css
@@ -64,3 +64,14 @@
 	color: #000000;
 	text-decoration: none;
 }
+.Title2 {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 16pt;
+	font-style: normal;
+	line-height: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	color: #000000;
+	text-decoration: none;
+}
