--- a/docs/Ve-Suite.css
+++ b/docs/Ve-Suite.css
@@ -31,6 +31,17 @@
 	color: #000000;
 	text-decoration: none;
 }
+.computer {
+	font-family: "Courier New", Courier, mono;
+	font-size: 12pt;
+	font-style: normal;
+	line-height: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	color: #000000;
+	text-decoration: none;
+}
 .question {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12pt;
