--- a/docs/Ve-Suite.css
+++ b/docs/Ve-Suite.css
@@ -9,17 +9,6 @@
 	color: #000000;
 	text-decoration: none;
 }
-.bodytext {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 12pt;
-	font-style: normal;
-	line-height: normal;
-	font-weight: normal;
-	font-variant: normal;
-	text-transform: none;
-	color: #000000;
-	text-decoration: none;
-}
 .bodytextemph {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12pt;
@@ -78,6 +67,28 @@
 .Title2 {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 16pt;
+	font-style: normal;
+	line-height: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	color: #000000;
+	text-decoration: none;
+}
+.bodytextital {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 12pt;
+	font-style: italic;
+	line-height: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	color: #000000;
+	text-decoration: none;
+}
+.text {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 12pt;
 	font-style: normal;
 	line-height: normal;
 	font-weight: normal;
